--- a/styles/header.css
+++ b/styles/header.css
@@ -32,7 +32,7 @@ header {
     height: 50px;
 }
 
-.header__content--user-info img {
+.header__user-info img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -40,7 +40,7 @@ header {
     cursor: pointer;
 }
 
-.header__content--user-info span {
+.header__user-info span {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -51,7 +51,7 @@ header {
     cursor: pointer;
 }
 
-.header__content--user-info:hover img,
-.header__content--user-info:hover span {
+.header__user-info:hover img,
+.header__user-info:hover span {
     background-color: var(--color-headerhover);
 }
