--- a/styles/board.css
+++ b/styles/board.css
@@ -5,8 +5,34 @@
 .board__head {
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: 3rem;
+}
+
+.board__head__searchbox {
+    background-color: #ffffff ;
+    display: inline flex;
+    align-items: center;
+    height: 3rem;
+    width: 50%;
+    border-radius: 8px;
+    border: 1px solid var(--color-lightgrey);
+    padding: 8px;
+}
+
+.board__head__searchbox img {
+    height: 1.8rem;
+    border-left: 0.15rem solid var(--color-lightgrey);
+    padding: 0.2rem 0.5rem 0.2rem 2rem;
+
+}
+
+.board__head__searchbox input {
+    color: var(--color-lightgrey);
+    font-size: 1.35rem;
+    width: 100%;
+    height: 2rem;
 }
 
 .task-search-and-add {
