expand tasks divs with another Div. better handling. added margin-bottom to h2 in help.html

--- a/styles/help.css
+++ b/styles/help.css
@@ -3,6 +3,10 @@
   margin-top: 8rem;
 }
 
+.help-content h2 {
+  margin-bottom: 2rem;
+}
+
 .help-content h3 {
   margin: 1.5rem 0;
   font-size: 1.688rem;
