--- a/style.css
+++ b/style.css
@@ -56,7 +56,12 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  flex: 1;  min-width: 0;
+  flex: 1;
+}
+
+.site-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .content {
