--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -66,6 +66,7 @@ body {
 
 .header__signup__signupBtn {
     padding: 0.9375rem 1rem;
+    font-size: 1rem;
 }
 
 main {
@@ -126,7 +127,11 @@ h1 {
     width: 100%;
     gap: 2rem;
 }
-
+.useraccess-form__btnholder {
+    display: flex;
+    flex-direction: row;
+    gap: 35px;
+}
 /* ######### Hover classes input borders ########### */
 
 .typing {
@@ -159,15 +164,6 @@ h1 {
 .form__inputfields__icon {
     height: 1.5rem;
     width: 1.5rem;
-}
-
-.useraccess-form__btnholder {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 2.1875rem;
-    width: 100%;
 }
 
 .guest {
@@ -208,7 +204,6 @@ h1 {
 }
 
 .useraccess-form__privacy-policy__link {
-    text-decoration: none;
     color: var(--color-lightblue);
     cursor: pointer;
 }
@@ -222,7 +217,6 @@ h1 {
 
 .footer__privacy-legal-box__links {
     height: fit-content;
-    text-decoration: none;
     color: var(--color-greyicons);
     font-weight: 400;
     font-size: 1rem;
