--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -14,25 +14,11 @@ body {
 }
 
 .btn {
-    background-color: var(--color-maincolor);
     border-radius: 0.5rem;
     padding: 0.9375rem 1.5rem;
     font-size: 1.31rem;
     font-weight: bold;
-    color: var(--color-white);
-    height: 3.5rem;
     width: auto;
-    transition: all var(--transition-slow) ease;
-}
-
-.btn:hover {
-    background-color: var(--color-lightblue);
-    box-shadow: 0 0.25rem 0.25rem color-mix(in srgb, var(--color-black) 25%, transparent);
-}
-
-.btn:active {
-    background-color: var(--color-navselected);
-    box-shadow: 0 0.25rem 0.25rem color-mix(in srgb, var(--color-black) 25%, transparent);
 }
 
 .header {
@@ -111,7 +97,7 @@ h1 {
     gap: 1rem;
 }
 
-.useraccess-form__header__bluestrip {
+.header__bluestrip {
     width: 9.375rem;
     height: 0;
     border-top: 0.1875rem solid;
@@ -119,7 +105,7 @@ h1 {
     border-radius: 0.1875rem;
 }
 
-.useraccess-form__inputfields {
+.form__inputfields {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -127,11 +113,13 @@ h1 {
     width: 100%;
     gap: 2rem;
 }
+
 .useraccess-form__btnholder {
     display: flex;
     flex-direction: row;
     gap: 35px;
 }
+
 /* ######### Hover classes input borders ########### */
 
 .typing {
@@ -144,7 +132,7 @@ h1 {
 
 /* ################################### */
 
-.useraccess-form__inputfield__wrapper {
+.inputfield__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -161,7 +149,7 @@ h1 {
     font-weight: 400;
 }
 
-.form__inputfields__icon {
+.inputfield__wrapper img {
     height: 1.5rem;
     width: 1.5rem;
 }
@@ -193,19 +181,18 @@ h1 {
     gap: 0.1875rem;
 }
 
-.useraccess-form__privacy-policy__checkbox {
+.useraccess-form__privacy-policy img {
     width: 1rem;
     height: 1rem;
     cursor: pointer;
 }
 
-.useraccess-form__privacy-policy__infotext {
+.useraccess-form__privacy-policy span{
     color: var(--color-greyicons);
 }
 
-.useraccess-form__privacy-policy__link {
+.useraccess-form__privacy-policy a {
     color: var(--color-lightblue);
-    cursor: pointer;
 }
 
 .footer__privacy-legal-box {
@@ -215,7 +202,7 @@ h1 {
     gap: 1rem;
 }
 
-.footer__privacy-legal-box__links {
+.footer__privacy-legal-box a {
     height: fit-content;
     color: var(--color-greyicons);
     font-weight: 400;
@@ -225,5 +212,4 @@ h1 {
 .footer__privacy-legal-box__links:hover {
     color: var(--color-lightblue);
     font-weight: 700;
-    cursor: pointer;
 }
