--- a/styles/header.css
+++ b/styles/header.css
@@ -1,11 +1,11 @@
 header {
     background-color: var(--color-white);
     color: black;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0rem 0.375rem 0.75rem rgba(0, 0, 0, 0.1);
 }
 
 .header__content {
-    height: 96px;
+    height: 6rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,7 +14,7 @@ header {
 .info-container {
     display: flex;
     align-items: center;
-    gap: 24px;
+    gap: 1.5rem;
 }
 
 .help-img {
@@ -29,8 +29,8 @@ header {
 .header__user-info {
     position: relative;
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 3.125rem;
+    height: 3.125rem;
 }
 
 .header__user-info img {
@@ -46,9 +46,9 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: var(--color-lightblue); 
+    color: var(--color-lightblue);
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1.125rem;
     cursor: pointer;
 }
 
@@ -66,9 +66,9 @@ header {
     justify-content: space-evenly;
     align-items: center;
     margin-left: auto;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-top-left-radius: 1.25rem;
+    border-bottom-left-radius: 1.25rem;
+    border-bottom-right-radius: 1.25rem;
     list-style: none;
     padding: 0;
     margin-right: 1rem;
@@ -76,11 +76,12 @@ header {
     right: 0;
     z-index: 100;
 }
+
 .submenu a {
     color: var(--color-white);
     transition: background-color 0.3s ease;
-    font-size: 1rem; 
-    padding: 8px; 
+    font-size: 1rem;
+    padding: 0.5rem;
 }
 
 .submenu a:hover {
