--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -44,13 +44,13 @@ body {
     align-self: flex-start;
 }
 
-.header__signup__message {
+.header__signup span {
     font-size: 1.25rem;
     font-weight: 400;
     color: var(--color-black);
 }
 
-.header__signup__signupBtn {
+.header__signup button {
     padding: 0.9375rem 1rem;
     font-size: 1rem;
 }
@@ -79,6 +79,12 @@ main {
     left: 3rem;
     top: 4rem;
     width: 2rem;
+}
+
+.useraccess-form__arrowicon:hover {
+    transform: scale(1.2);
+    background-color: var(--color-iconbackground);
+    border-radius: 50%;
 }
 
 h1 {
@@ -118,6 +124,7 @@ h1 {
     display: flex;
     flex-direction: row;
     gap: 35px;
+    height: 3.875rem;
 }
 
 /* ######### Hover classes input borders ########### */
@@ -142,7 +149,7 @@ h1 {
     width: 26.375rem;
 }
 
-.useraccess-form__inputfield__wrapper input {
+.inputfield__wrapper input {
     width: 90%;
     height: 1.5rem;
     font-size: 1.25rem;
@@ -157,8 +164,9 @@ h1 {
 .guest {
     background-color: var(--color-white);
     color: var(--color-maincolor);
-    border: 1px solid var(--color-maincolor);
-    transition: all var(--transition-slow) ease;
+    border: 0.063rem solid var(--color-maincolor);
+    transition: all var(--transition-normal) ease;
+    width: 11.25rem;
 }
 
 .guest:hover {
@@ -171,23 +179,44 @@ h1 {
 .guest:active {
     color: var(--color-navselected);
     box-shadow: 0 0.25rem 0.25rem color-mix(in srgb, var(--color-black) 25%, transparent);
-    border: 1px solid var(--color-navselected);
+    border: 0.063rem solid var(--color-navselected);
 }
 
 .useraccess-form__privacy-policy {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    gap: 0.1875rem;
+    gap: 0.5rem;
 }
 
-.useraccess-form__privacy-policy img {
+input[type="checkbox"] {
+    display: none;
+}
+
+label {
+    display: inline-block;
     width: 1rem;
     height: 1rem;
+    background: url('../assets/img/checkbox-unchecked.svg') no-repeat center / contain;
     cursor: pointer;
 }
 
-.useraccess-form__privacy-policy span{
+label:hover {
+    background-color: var(--color-checkboxbackground);
+}
+
+input[type="checkbox"]:checked+label {
+    background-image: url('../assets/img/checkbox-checked.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+input[type="checkbox"]:checked+label:hover {
+    background-color: var(--color-checkboxbackground);
+}
+
+.useraccess-form__privacy-policy span {
     color: var(--color-greyicons);
 }
 
@@ -209,7 +238,7 @@ h1 {
     font-size: 1rem;
 }
 
-.footer__privacy-legal-box__links:hover {
+.footer__privacy-legal-box a:hover {
     color: var(--color-lightblue);
     font-weight: 700;
 }
