--- a/styles/board.css
+++ b/styles/board.css
@@ -16,16 +16,28 @@
     align-items: center;
     height: 3rem;
     width: 50%;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     border: 1px solid var(--color-lightgrey);
-    padding: 8px;
+    padding: 0.5rem;
+}
+
+.board__head__searchbox:focus-within {
+    border-color: var(--color-lightblue);
+}
+
+.board__head__searchbox input:not(:placeholder-shown) {
+    outline: none;
+}
+
+.board__head__searchbox:has(input:not(:placeholder-shown)) {
+    border-color: var(--color-lightblue);
 }
 
 .board__head__searchbox img {
-    height: 1.8rem;
+    height: 2rem;
     border-left: 0.15rem solid var(--color-lightgrey);
-    padding: 0.2rem 0.5rem 0.2rem 2rem;
-
+    padding: 0 0.6rem 0 1.5rem;
+    cursor: pointer;
 }
 
 .board__head__searchbox input {
@@ -34,10 +46,35 @@
     height: 2rem;
 }
 
+::-webkit-search-cancel-button {
+    cursor: pointer;
+}
+
 .task-search-and-add {
     width: 50%;
     display: flex;
     justify-content: space-evenly;
+}
+
+.search-btn:hover {
+    content: url(../assets/img/search-hover.svg);
+}
+
+.search-btn:active {
+    content: url(../assets/img/search-active.svg);
+}
+
+.add-task-btn {
+    height: 3rem;
+    font-size: 1.35rem;
+    font-weight: 700;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    gap: 0.4rem;
+}
+
+.add-task-btn img {
+    vertical-align: middle;
+    height: 1.2rem;
 }
 
 .board__table {
@@ -52,18 +89,27 @@
 }
 
 .board__table h3 {
+    font-size: 1.25rem;
     color: var(--color-menu);
 }
 
-.blue-btn {
-    height: 3rem;
-    font-size: 1.35rem;
-    font-weight: 700;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    gap: 0.4rem;
+.no-tasks-placeholder {
+  display: flex;
+  align-items: center;
+  justify-content: center;       
+  padding: 1rem;
+  background-color: #E7E7E7;
+  border: 1px dashed var(--color-greyicons);
+  border-radius: 0.625rem;
+  color: var(--color-greyicons);
+  font-size: 1rem;
+  font-weight: 400;
+  box-shadow: 0 0 0.25rem rgba(0,0,0,0.16); 
 }
 
-.blue-btn img {
-    vertical-align: middle;
-    height: 1.2rem;
+.tasks {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    gap: 1rem;
 }
