--- a/style.css
+++ b/style.css
@@ -101,25 +101,25 @@ main {
   padding: 0 4rem 0 6rem;
 }
 
-h1 {
+header span {
   font-size: 1.25rem;
   font-weight: 400;
 }
 
-h2 {
+h1 {
   font-weight: 700;
   font-size: 3.75rem;
   font-weight: bold;
   color: var(--color-black);
 }
 
-h3 {
+h2 {
   font-size: 2rem;
   font-weight: 700;
   color: var(--color-black);
 }
 
-h4 {
+h3 {
   font-size: 2.9rem;
   font-weight: 500;
   color: var(--color-black);
