--- a/styles/board.css
+++ b/styles/board.css
@@ -77,6 +77,14 @@
     height: 1.2rem;
 }
 
+.add-task-to-btn:hover {
+    content: url(../assets/img/add-btn-border-hover.svg);
+}
+
+.add-task-to-btn:active {
+    content: url(../assets/img/add-btn-border-active.svg);
+}
+
 .board__table {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
