--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -8,7 +8,7 @@
   color: var(--color-black);
 }
 
-.task_epic {
+.task_category {
   width: fit-content;
   align-items: center;
   color: var(--color-white);
@@ -17,8 +17,20 @@
   padding: 0.25rem 1rem;
 }
 
+.task_category2 {
+  width: fit-content;
+  align-items: center;
+  color: var(--color-white);
+  background-color: var(--color-5);
+  border-radius: 0.5rem;
+  padding: 0.25rem 1rem;
+}
+
 .task_content-metadata-box {
+  display: flex;
+  flex-direction: column;
   margin: 1.5rem 0;
+  gap: 0.5rem;
 }
 
 .task_title {
@@ -39,13 +51,20 @@
   align-items: center;
   justify-content: space-between;
   gap: 0.75rem;
+  margin-bottom: 1.5rem;
 }
 
 .task_progressbar {
   --progress: 0%;
   height: 0.5rem;
   border-radius: 10px;
-  background: linear-gradient(to right, #4589ff 0%, #00bee8 var(--progress), #eee var(--progress), #eee 100%);
+  background: linear-gradient(
+    to right,
+    #4589ff 0%,
+    #00bee8 var(--progress),
+    #eeeeee var(--progress),
+    #eeeeee 100%
+  );
   flex: 1;
   transition: background 0.5s ease-in-out;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
@@ -54,10 +73,28 @@
 .task_assignment-and-priority-box {
   display: flex;
   align-items: center;
-  margin-top: 1.5rem;
 }
 
 .task_assignments {
   display: flex;
   flex: 1;
 }
+
+.task_assignments img {
+  height: 2rem;
+  border-radius: 50%;
+  border: 1px solid var(--color-white);
+  object-fit: cover;
+  margin-left: -10px;
+  transition: transform 0.05s ease, z-index 0.05s ease;
+}
+
+.task_assignments img:first-child {
+  margin-left: 0;
+}
+/* OPTIONAL - WENN ZUM SCHLUSS NOCH ZEIT */
+/* .task_assignments img:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+    z-index: 2;
+} */
