--- a/styles/header.css
+++ b/styles/header.css
@@ -57,7 +57,7 @@ header {
     background-color: var(--color-headerhover);
 }
 
-.submenu {
+.user-drop-down-menu {
     flex-direction: column;
     background-color: var(--color-maincolor);
     height: 9.87rem;
@@ -71,19 +71,24 @@ header {
     border-bottom-right-radius: 1.25rem;
     list-style: none;
     padding: 0;
-    margin-right: 1rem;
+    margin-right: 2rem;
     position: absolute;
     right: 0;
     z-index: 100;
 }
 
-.submenu a {
+.user-drop-down-menu a {
     color: var(--color-white);
     transition: background-color 0.3s ease;
     font-size: 1rem;
     padding: 0.5rem;
 }
 
-.submenu a:hover {
+.user-drop-down-menu a:hover {
     background-color: var(--color-navhover);
+}
+
+.header-wrapper {
+    position: relative;
+    max-width: 1920px;
 }
