--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -103,6 +103,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: end;
     gap: 1rem;
     margin-top: 2.5rem;
     padding-right: 6rem;
@@ -131,4 +132,20 @@
     cursor: pointer;
     padding: 0.625rem;
     gap: 0.6rem;
+}
+
+select {
+  cursor: pointer;
+}
+
+input:invalid {
+  border: 2px solid var(--color-error);
+}
+
+input:valid {
+  border: 2px solid var(--color-lightblue);
+}
+
+.subtasks__input--border-color input{
+  border: 2px solid var(--color-lightgrey);
 }
