--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,11 @@ header {
     box-shadow: 0rem 0.375rem 0.75rem rgba(0, 0, 0, 0.1);
 }
 
+header span {
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
 .header__content {
     height: 6rem;
     display: flex;
