--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -81,11 +81,11 @@
 }
 
 .task_assignments img {
-  height: 2rem;
+  height: 2.5rem;
   border-radius: 50%;
   border: 1px solid var(--color-white);
   object-fit: cover;
-  margin-left: -10px;
+  margin-left: -0.75rem;
   transition: transform 0.05s ease, z-index 0.05s ease;
 }
 
