--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
   --color-headerhover: #e2e6ec;
   --color-iconbackground: #EEEEEE;
   --color-checkboxbackground: #EDF2FA;
+  --color-email: #007CEE;
 }
 
 :root {
@@ -107,7 +108,6 @@ header span {
 }
 
 h1 {
-  font-weight: 700;
   font-size: 3.75rem;
   font-weight: bold;
   color: var(--color-black);
