--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -9,6 +9,7 @@
 }
 
 .task_category {
+  display: inline-flex;
   width: fit-content;
   align-items: center;
   color: var(--color-white);
@@ -18,6 +19,7 @@
 }
 
 .task_category2 {
+  display: inline-flex;
   width: fit-content;
   align-items: center;
   color: var(--color-white);
