--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -6,19 +6,48 @@ section {
 #contacts_content {
     max-width: 1920px;
     padding: 0 4rem 0 0;
+    height: 100%;
 }
+
+.content {
+    margin-bottom: 0px;
+    height: 100%;
+}
+
+.site-wrapper {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+main {
+    height: 100%;
+}
+
+.contacts_page_conatiner {
+    height: 100%;
+}
+
 
 .content-left {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 38%;
-    height: 100vh;
+    min-width: 430px;
+    height: 100%;
     background-color: var(--color-white);
-    padding: 23px 55px 0px 55px;
+    overflow-y: scroll;
 }
 
-.content-left button {
+.button-holder {
+    position: sticky;
+    top: 0px;
+    background-color: var(--color-white);
+    width: 100%;
+    padding: 23px 52px;
+}
+
+.button-holder button {
     height: 56px;
     width: 100%;
     font-size: 21px;
@@ -26,7 +55,7 @@ section {
     justify-content: center;
 }
 
-.content-left button img {
+.button-holder button img {
     margin-left: 16px;
     width: 30px;
     height: auto;
@@ -34,6 +63,7 @@ section {
 
 .contact-list {
     width: 100%;
+    padding: 0px 52px;
 }
 
 .contact-list__item {
@@ -88,6 +118,7 @@ section {
     flex-direction: row;
     align-items: center;
     gap: 30px;
+    flex-wrap: wrap;
 }
 
 .content-right__header span {
@@ -109,6 +140,7 @@ section {
     align-items: center;
     gap: 54px;
     margin-bottom: 40px;
+    flex-wrap: wrap;
 }
 
 .rendered-card__header img {
