--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -125,10 +125,6 @@ h1 {
 
 /* ######### Hover classes input borders ########### */
 
-.typing {
-    border: 1px solid var(--color-lightblue);
-}
-
 .error {
     border: 1px solid var(--color-error);
 }
@@ -143,6 +139,10 @@ h1 {
     border-radius: 0.625rem;
     padding: 0.75rem 1.3125rem;
     width: 26.375rem;
+}
+
+.inputfield__wrapper:focus-within {
+    border: 1px solid var(--color-lightblue);
 }
 
 .inputfield__wrapper input {
