--- a/styles/dlg-add-contact.css
+++ b/styles/dlg-add-contact.css
@@ -1,4 +1,4 @@
-.add-contact__overlay {
+.add-contact__dialog {
     visibility: hidden;
     display: flex;
     flex-direction: row;
@@ -16,11 +16,11 @@
     padding: 0px;
 }
 
-.add-contact__overlay::backdrop {
+.add-contact__dialog::backdrop {
     background-color: color-mix(in srgb, var(--color-maincolor) 50%, transparent);
 }
 
-.overlay-left {
+.dialog-left {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,16 +31,16 @@
     border-radius: 30px 0px 0px 30px;
 }
 
-.overlay-left img {
+.dialog-left img {
     width: 56px;
     height: 67px;
 }
 
-.overlay-left h1 {
+.dialog-left h1 {
     color: var(--color-white);
 }
 
-.overlay-left p {
+.dialog-left p {
     color: var(--color-white);
     font-size: 27px;
 }
@@ -53,7 +53,7 @@
     border-radius: 0.1rem;
 }
 
-.overlay-right {
+.dialog-right {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -88,7 +88,7 @@
     gap: 72px;
 }
 
-.img-wrapper img {
+.profil-img__wrapper img {
     width: 120px;
     height: 120px;
 }
@@ -98,7 +98,7 @@
     width: 60%;
 }
 
-.form__inputfields {
+.inputfields {
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -127,22 +127,24 @@
     border: 1px solid var(--color-lightblue);
 }
 
-.overlay-right__button-holder {
+.inputfields__button-holder {
     display: flex;
     flex-direction: row;
     gap: 24px;
     height: 54px;
 }
 
-.overlay-right__button-holder button {
-    gap: 8px;
-}
-
 .empty-btn {
     width: 126px;
     justify-content: center;
+    font-size: 20px;
+    gap: 12px;
 }
 
 .empty-btn:hover img {
     content: url('../assets/img/close-hover.svg');
+}
+
+.filled-btn {
+    gap: 12px;
 }
