--- a/styles/task-card.css
+++ b/styles/task-card.css
@@ -8,7 +8,7 @@
   color: var(--color-black);
 }
 
-.task_category {
+.task__category {
   display: inline-flex;
   width: fit-content;
   align-items: center;
@@ -18,7 +18,7 @@
   padding: 0.25rem 1rem;
 }
 
-.task_category2 {
+.task__category2 {
   display: inline-flex;
   width: fit-content;
   align-items: center;
@@ -28,26 +28,26 @@
   padding: 0.25rem 1rem;
 }
 
-.task_content-metadata-box {
+.task__content-metadata-box {
   display: flex;
   flex-direction: column;
   margin: 1.5rem 0;
   gap: 0.5rem;
 }
 
-.task_title {
+.task__title {
   color: var(--color-maincolor);
   font-size: 1rem;
   font-weight: 700;
 }
 
-.task_description {
+.task__description {
   color: var(--color-greyicons);
   font-size: 1rem;
   font-weight: 400;
 }
 
-.task_subtasks-and-progressbar-box {
+.task__subtasks-and-progressbar-box {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -56,7 +56,7 @@
   margin-bottom: 1.5rem;
 }
 
-.task_progressbar {
+.task__progressbar {
   --progress: 0%;
   height: 0.5rem;
   border-radius: 10px;
@@ -72,17 +72,17 @@
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.15);
 }
 
-.task_assignment-and-priority-box {
+.task__assignment-and-priority-box {
   display: flex;
   align-items: center;
 }
 
-.task_assignments {
+.task__assignments {
   display: flex;
   flex: 1;
 }
 
-.task_assignments img {
+.task__assignments img {
   height: 2.5rem;
   border-radius: 50%;
   border: 1px solid var(--color-white);
@@ -91,7 +91,7 @@
   transition: transform 0.05s ease, z-index 0.05s ease;
 }
 
-.task_assignments img:first-child {
+.task__assignments img:first-child {
   margin-left: 0;
 }
 /* OPTIONAL - WENN ZUM SCHLUSS NOCH ZEIT */
