--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,18 +1,16 @@
 section {
-
-    /* grip draus machen '''''''''''''''''''''''''''''*/
     display: flex;
     flex-direction: row;
 }
 
 #contacts_content {
-    max-width: 1920px;
+    max-width: 120rem;
     padding: 0 4rem 0 0;
     height: 100%;
 }
 
 .content {
-    margin-bottom: 0px;
+    margin-bottom: 0rem;
     height: 100%;
 }
 
@@ -29,49 +27,45 @@ main {
     height: 100%;
 }
 
-
 .content-left {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 38%;
-    min-width: 430px;
+    min-width: 26.875rem;
     height: 100%;
     background-color: var(--color-white);
     overflow-y: scroll;
 }
 
 .content-left::-webkit-scrollbar {
-    width: 10px;
+    width: 0.625rem;
 }
 
-/* Handle */
 .content-left::-webkit-scrollbar-thumb {
     background: var(--color-lightgrey);
 }
 
-/* Handle on hover */
 .content-left::-webkit-scrollbar-thumb:hover {
     background: var(--color-maincolor);
 }
 
-/* Track */
 .content-left::-webkit-scrollbar-track {
     background: #ffffff;
 }
 
 .content-left__button-holder {
     position: sticky;
-    top: 0px;
+    top: 0rem;
     background-color: var(--color-white);
     width: 100%;
-    padding: 23px 52px;
+    padding: 1.4375rem 3.25rem;
 }
 
 .button-holder button {
-    height: 56px;
+    height: 3.5rem;
     width: 100%;
-    font-size: 21px;
+    font-size: 1.3125rem;
     font-weight: 700;
     justify-content: center;
 }
@@ -81,21 +75,21 @@ main {
 }
 
 .button-holder button img {
-    margin-left: 16px;
-    width: 30px;
+    margin-left: 1rem;
+    width: 1.875rem;
     height: auto;
 }
 
 .contact-list {
     width: 100%;
-    padding: 0px 52px;
+    padding: 0rem 3.25rem;
 }
 
 .contact-list__item {
     display: flex;
     flex-direction: row;
-    gap: 35px;
-    padding: 15px 24px;
+    gap: 2.1875rem;
+    padding: 0.9375rem 1.5rem;
 }
 
 .contact-list__item:hover {
@@ -106,22 +100,22 @@ main {
 .contact-list__item div {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 0.3125rem;
 }
 
 .contact-list__initial-letter {
     width: 100%;
     border-bottom: 1px solid var(--color-lightgrey);
-    padding: 17px 36px;
+    padding: 1.0625rem 2.25rem;
 }
 
 .contact-list__item img {
-    width: 42px;
-    height: 42px;
+    width: 2.625rem;
+    height: 2.625rem;
 }
 
 #contact-name {
-    font-size: 20px;
+    font-size: 1.25rem;
     color: var(--color-black);
 }
 
@@ -134,26 +128,26 @@ main {
     flex-direction: column;
     margin-top: 8rem;
     width: 62%;
-    gap: 32px;
-    padding-left: 55px;
+    gap: 2rem;
+    padding-left: 3.4375rem;
 }
 
 .content-right__header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 30px;
+    gap: 1.875rem;
     flex-wrap: wrap;
 }
 
 .content-right__header span {
-    font-size: 27px;
+    font-size: 1.6875rem;
     color: var(--color-maincolor);
 }
 
 .header__bluestrip {
-    width: 0px;
-    height: 59px;
+    width: 0rem;
+    height: 3.6875rem;
     border: 0.1rem solid;
     border-color: var(--color-lightblue);
     border-radius: 0.1rem;
@@ -163,37 +157,36 @@ main {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 54px;
-    margin-bottom: 40px;
+    gap: 3.375rem;
+    margin-bottom: 2.5rem;
     flex-wrap: wrap;
 }
 
 .header__user-profil-img {
-    width: 120px;
-    height: 120px;
-
+    width: 7.5rem;
+    height: 7.5rem;
 }
 
 .manage-contact__header {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.5rem;
 }
 
 .manage-contact__actions {
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 1rem;
 }
 
 .action__edit {
-    height: 24px;
-    width: 62px;
+    height: 1.5rem;
+    width: 3.875rem;
 }
 
 .action__delete {
-    height: 24px;
-    width: 81px;
+    height: 1.5rem;
+    width: 5.0625rem;
 }
 
 .action__edit:hover {
@@ -201,21 +194,20 @@ main {
     cursor: pointer;
 }
 
-
 .action__delete:hover {
     content: url('../assets/img/delete-with-text-hover.svg');
     cursor: pointer;
 }
 
 .contact-info__header {
-    font-size: 20px;
-    margin-bottom: 40px;
+    font-size: 1.25rem;
+    margin-bottom: 2.5rem;
 }
 
 .contact-info__details {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .details__email {
