--- a/styles/dlg-add-contact.css
+++ b/styles/dlg-add-contact.css
@@ -4,16 +4,16 @@
     flex-direction: row;
     position: absolute;
     height: 50vh;
-    max-height: 700px;
+    max-height: 43.75rem;
     width: 90vw;
-    max-width: 1500px;
+    max-width: 93.75rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     background-color: var(--color-white);
-    padding: 0px;
+    padding: 0rem;
 }
 
 .add-contact__dialog::backdrop {
@@ -24,16 +24,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 16px;
+    gap: 1rem;
     width: 40%;
     background-color: var(--color-maincolor);
-    padding: 0px 48px;
-    border-radius: 30px 0px 0px 30px;
+    padding: 0rem 3rem;
+    border-radius: 1.875rem 0rem 0rem 1.875rem;
 }
 
 .dialog-left img {
-    width: 56px;
-    height: 67px;
+    width: 3.5rem;
+    height: 4.1875rem;
 }
 
 .dialog-left h1 {
@@ -42,12 +42,12 @@
 
 .dialog-left p {
     color: var(--color-white);
-    font-size: 27px;
+    font-size: 1.6875rem;
 }
 
 .content-left__bluestrip {
-    width: 90px;
-    height: 0px;
+    width: 5.625rem;
+    height: 0rem;
     border: 0.1rem solid;
     border-color: var(--color-lightblue);
     border-radius: 0.1rem;
@@ -58,21 +58,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0px 48px;
+    padding: 0rem 3rem;
     background-color: var(--color-white);
-    border-radius: 0px 30px 30px 0px;
+    border-radius: 0rem 1.875rem 1.875rem 0rem;
     width: 60%;
 }
 
 .close-button__wrapper {
     position: absolute;
-    top: 52px;
-    right: 52px;
+    top: 3.25rem;
+    right: 3.25rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 32px;
-    height: 32px;
+    width: 2rem;
+    height: 2rem;
 }
 
 .close-button__wrapper:hover {
@@ -85,23 +85,23 @@
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    gap: 72px;
+    gap: 4.5rem;
 }
 
 .profil-img__wrapper img {
-    width: 120px;
-    height: 120px;
+    width: 7.5rem;
+    height: 7.5rem;
 }
 
 .width-div {
-    min-width: 340px;
+    min-width: 21.25rem;
     width: 60%;
 }
 
 .inputfields {
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 2rem;
     align-items: center;
 }
 
@@ -122,7 +122,6 @@
     width: 90%;
 }
 
-
 .inputfield__wrapper:focus-within {
     border: 1px solid var(--color-lightblue);
 }
@@ -130,15 +129,15 @@
 .inputfields__button-holder {
     display: flex;
     flex-direction: row;
-    gap: 24px;
-    height: 54px;
+    gap: 1.5rem;
+    height: 3.375rem;
 }
 
 .empty-btn {
-    width: 126px;
+    width: 7.875rem;
     justify-content: center;
-    font-size: 20px;
-    gap: 12px;
+    font-size: 1.25rem;
+    gap: 0.75rem;
 }
 
 .empty-btn:hover img {
@@ -146,5 +145,5 @@
 }
 
 .filled-btn {
-    gap: 12px;
+    gap: 0.75rem;
 }
