--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -5,6 +5,7 @@ body {
 
 .content-wrapper {
     display: flex;
+    visibility: visible;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -29,10 +30,18 @@ body {
     width: 6.25rem;
     height: 7.625rem;
     margin-top: 0.8125rem;
+    z-index: 3;
+    transition: transform 1s ease-in-out;
+}
+
+.header__joinlogo.start {
+    transform: translate(800px, 35vh) scale(2.7);
+    z-index: 3;
 }
 
 .header__signup {
     display: flex;
+    visibility: visible;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -237,4 +246,31 @@ input[type="checkbox"]:checked+label:hover {
 .footer__privacy-legal-box a:hover {
     color: var(--color-lightblue);
     font-weight: 700;
+}
+
+.invisible {
+    visibility: hidden;
+}
+
+.disabled {
+    pointer-events: none;
+}
+
+.signup__success-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    font-size: 20px;
+    color: var(--color-white);
+    width: fit-content;
+    transform: translate(-50%, -50%);
+    z-index: 4;
+    background-color: var(--color-maincolor);
+    border-radius: 20px;
+    padding: 25px;
+    box-shadow: 0px 0px 4px color-mix(in srgb, var(--color-black) 15%, transparent);
+}
+
+.signup__success-message::backdrop {
+    background-color: color-mix(in srgb, var(--color-maincolor) 90%, transparent);
 }
