Changed buttons to divs in several files Created Templates for add/edit task

--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -17,6 +17,8 @@ body {
     padding: 0.9375rem 1.5rem;
     font-size: 1.31rem;
     font-weight: bold;
+    display: inline-flex;
+    align-items: center;
     width: auto;
 }
 
