--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -3,7 +3,7 @@ section {
     flex-direction: row;
 }
 
-#contacts_content {
+#contacts-content {
     max-width: 120rem;
     padding: 0 4rem 0 0;
     height: 100%;
@@ -62,7 +62,7 @@ main {
     padding: 1.4375rem 3.25rem;
 }
 
-.button-holder button {
+.button-holder div {
     height: 3.5rem;
     width: 100%;
     font-size: 1.3125rem;
@@ -74,7 +74,7 @@ main {
     width: 100%;
 }
 
-.button-holder button img {
+.button-holder div img {
     margin-left: 1rem;
     width: 1.875rem;
     height: auto;
@@ -114,12 +114,12 @@ main {
     height: 2.625rem;
 }
 
-#contact-name {
+.contact-name {
     font-size: 1.25rem;
     color: var(--color-black);
 }
 
-#contact-email {
+.contact-email {
     color: var(--color-email);
 }
 
@@ -153,7 +153,11 @@ main {
     border-radius: 0.1rem;
 }
 
-.rendered-card__header {
+.content-right__contact-info-card {
+    visibility: hidden;
+}
+
+.contact-info-card__header {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -162,7 +166,7 @@ main {
     flex-wrap: wrap;
 }
 
-.header__user-profil-img {
+.header__contact-profil-img {
     width: 7.5rem;
     height: 7.5rem;
 }
