--- a/style.css
+++ b/style.css
@@ -109,6 +109,12 @@ main {
   padding: 0 4rem 0 6rem;
 }
 
+.overflow-y {
+  overflow-y: auto;
+  scrollbar-width: none;
+  height: calc(100vh - 8rem);
+}
+
 h1 {
   font-size: 3.75rem;
   font-weight: bold;
@@ -132,6 +138,7 @@ input:focus {
   border: none;
 }
 
+textarea::placeholder,
 input::placeholder {
   font-weight: 400;
   font-size: 1.25rem;
@@ -142,7 +149,10 @@ a {
   text-decoration: none;
 }
 
-a:hover, button:hover, input:hover {
+a:hover,
+button:hover,
+input:hover,
+::-webkit-search-cancel-button {
   cursor: pointer;
 }
 
@@ -195,8 +205,24 @@ a:hover, button:hover, input:hover {
   border: 1px solid var(--color-navselected);
 }
 
-.overflow-y {
-  overflow-y: scroll;
-  scrollbar-width: none;
-  height: 80vh;
+.priority-options-btn {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 1.125rem 1.75rem;
+    background-color: var(--color-white);
+    box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.1);
+    border-radius: 0.625rem;
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: var(--color-black);
+    transition: transform var(--transition-slow) ease;
+    gap: 0.75rem;
+}
+
+.priority-options-btn:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0.375rem 0.375rem rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
