--- a/styles/dlg-task-info.css
+++ b/styles/dlg-task-info.css
@@ -8,8 +8,8 @@ dialog {
   gap: 1.5rem;
   left: 40%;
   height: 80%;
-  width: 32rem;
-  padding: 3rem 2.5rem;
+  width: 33rem;
+  padding: 3rem 2rem;
   border-radius: 1.875rem;
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.16);
   z-index: 1000;
@@ -28,6 +28,7 @@ dialog {
 
 .dlg__main {
     gap: 1.5rem;
+    padding: 0 0.5rem;
 }
 
 .dlg__header_task-category {
@@ -46,13 +47,13 @@ dialog {
 }
 
 .dlg__main__task__due-date,
-.dlg__main_task-priority {
+.dlg__main_task-priority-box {
     display: flex;
     align-items: center;
     gap: 2rem;
 }
 .dlg__main__task__due-date-label,
-.dlg__main__task-priority {
+.dlg__main__task-priority-title {
     color: var(--color-maincolor);
 }
 
