--- a/styles/summary.css
+++ b/styles/summary.css
@@ -86,6 +86,14 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-weight: 400;
+    font-size: 1rem;
+    gap: 1rem;
+}
+
+.metrics__box-date {
+    font-weight: 700;
+    font-size: 1.3rem;
 }
 
 .metric-number {
