--- a/styles/dlg-edit-task.css
+++ b/styles/dlg-edit-task.css
@@ -1,3 +1,20 @@
+.dlg {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  align-self: center;
+  justify-self: center;
+  font-size: 1.25rem;
+  font-weight: 400;
+  gap: 1.5rem;
+  height: 80%;
+  width: 33rem;
+  padding: 3rem 2rem;
+  border-radius: 1.875rem;
+  box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.16);
+  z-index: 1000;
+}
+
 .overflow-y {
   scrollbar-width: thin;
 }
