--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -116,7 +116,7 @@
     padding: 0.625rem;
     gap: 0.6rem;
 }
-
+/* 
 select {
   cursor: pointer;
 }
@@ -131,4 +131,4 @@ input:valid {
 
 .subtasks__input--border-color input{
   border: 2px solid var(--color-lightgrey);
-}
+} */
