first try assignment  contact selection, cleared conflict between add-task.css and dlg-edit-task.css.

--- a/style.css
+++ b/style.css
@@ -152,7 +152,8 @@ a {
 a:hover,
 button:hover,
 input:hover,
-::-webkit-search-cancel-button {
+::-webkit-search-cancel-button,
+select {
   cursor: pointer;
 }
 
