--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -116,19 +116,15 @@
     padding: 0.625rem;
     gap: 0.6rem;
 }
-/* 
-select {
-  cursor: pointer;
-}
 
-input:invalid {
+.input--validation-modifier:invalid {
   border: 2px solid var(--color-error);
 }
 
-input:valid {
+.input--validation-modifier:valid {
   border: 2px solid var(--color-lightblue);
 }
 
 .subtasks__input--border-color input{
   border: 2px solid var(--color-lightgrey);
-} */
+}
